# ses_proxy

./: .gitignore  CMakeLists.txt  README.md  config.json
cryptonote/: CMakeLists.txt  cryptonote_CMakeLists.txt
src/: difficulty.hpp  main.cpp
src/cryptonight/: CMakeLists.txt  CryptoNight.cpp  CryptoNight.h  CryptoNight_softAES.h
src/cryptonote/: CMakeLists.txt  cryptonote.cpp  cryptonote.hpp
src/cryptonote/crypto/: crypto.h  hash-ops.h  hash.h  hash.h.orig
src/cryptonote/cryptonote_core/: cryptonote_basic.h  cryptonote_basic.h.orig  cryptonote_format_utils.cpp  cryptonote_format_utils.cpp.orig  cryptonote_format_utils.h  cryptonote_format_utils.h.orig  tx_extra.h
src/cryptonote/cryptonote_protocol/: blobdatatype.h.orig
src/cryptonote/ringct/: rctTypes.h
src/cryptonote/serialization/: binary_archive.h  binary_archive.h.orig  crypto.h  crypto.h.orig  serialization.h.orig  variant.h.orig
src/net/: connection.cpp  connection.hpp  connectiontype.hpp  endpoint.hpp
src/net/client/: boostconnection.hpp  boosttcpconnection.cpp  boosttcpconnection.hpp  boosttlsconnection.cpp  boosttlsconnection.hpp  connection.cpp  connection.hpp  http.cpp  http.hpp
src/net/jsonrpc/: jsonrpc.cpp  jsonrpc.hpp
src/net/server/: connection.cpp  connection.hpp  server.cpp  server.hpp
src/proxy/: algorithm.cpp  algorithm.hpp  blob.cpp  blob.hpp  ccclient.cpp  ccclient.hpp  client.cpp  client.hpp  clientstat.h  clientstatistics.cpp  clientstatistics.hpp  configurationfile.cpp  configurationfile.hpp  job.cpp  job.hpp  jobresult.cpp  jobresult.hpp  jobsource.cpp  jobsource.hpp  jobtemplate.cpp  jobtemplate.hpp  jobtemplatebase.hpp  jobtemplatemaster.hpp  jobtemplatenicehash.hpp  jobtemplatesolo.hpp  jobtemplateworker.hpp  pool.cpp  pool.hpp  proxy.cpp  proxy.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp  workeridentifier.cpp  workeridentifier.hpp  workertype.hpp
src/stratum/: job.cpp  job.hpp  stratum.cpp  stratum.h  stratum.hpp
src/util/: boostpropertytree.hpp  difficulty.cpp  difficulty.hpp  hashratebalancer.hpp  hashratecalculator.cpp  hashratecalculator.hpp  hex.hpp  log.cpp  log.hpp  pidcontroller.cpp  pidcontroller.hpp  shell.cpp  shell.hpp  target.cpp  target.hpp
test/: CMakeLists.txt
test/util/: test_pid.cpp  test_util.cpp
